@@ -4,7 +4,7 @@
 
 {% block content %}
 <h1>{{ page.title }}</h1>
-<h2>{{ page.date | date:"dd-MM" }}-<a href="/articles/{{ page.date | date:"yyyy" }}/">{{ page.date | date:"yyyy" }}</a></h2>
+<h2>{{ page.date | date:"dd-MM" }}-<a href="/articles/{{ page.date | date:"yyyy" }}/">{{ page.date | date:"yyyy" }}</a>, {{ page.body|striptags|wordcount }} words</h2>
 <ul>
   {% for tag in page.metadata.tags %}
   <li><a href="/articles/tag/{{ tag }}/">{{ tag }}</a></li>
