@@ -1,6 +1,7 @@
 # 0.8.0 - not released yet
 - Replaced Ink and Stencil with SwiftMarkdown, see https://github.com/loopwerk/Saga/pull/3
-- Added a way to supply custom SiteMetadata, which will be given to every template
+- Added a way to supply custom `SiteMetadata`, which will be given to every template
+- Added `striptags` and `wordcount` filters for Stencil
 
 # 0.7.0 - 2021-02-03
 - Complete API redesign, see https://github.com/loopwerk/Saga/pull/1
